Fixed alignment for tip and review columns. Maintained logo image ratio when small screens. Made case for if no current tip of day

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -69,7 +69,9 @@ ul.nav a:hover {
 }
 .col-centered {
     display:inline-block;
+    margin-top: none;
     float:none;
+	vertical-align: top;
     /* reset the text-align */
     text-align:left;
     /* inline-block space fix */
